# NEDSS-DataReporting

./: .gitguardian.yaml  .gitignore  .gitmodules  .project  APP-787-Changes.md  PERFORMANCE_TESTING_GUIDE.md  README.md  STRESS_TEST_OBSERVABILITY.md  build.gradle  data-verification-queries.md  docker-compose.new.yaml  docker-compose.override.yaml  docker-compose.shared.yml  docker-compose.test.yaml  docker-compose.yaml  env.sample  nbs7-di  nbs7-guide  nedssdev  rdb_data_dictionary.txt  settings.gradle
.github/: dependabot.yml  pull_request_template.md
bootstrap/: 101-enable_cdc_on_odse_database-001.sql  101-enable_cdc_on_odse_srte_databases-001.sql  102-enable_cdc_on_srte_database-001.sql  103-create_event_metric_cleanup_job-001.sql  README.md
bugs/: README.md
common-util/: build.gradle
containers/: build_classic.sh
documentation/: DevSetup.md  DockerAuth.md  ELR_Bulk_Load_Playbook.md  ELR_Playbook_Gaps_Jira.md  (+3 more)
testing-tools/functional-test/: README.md  pyproject.toml
testing-tools/functional-test/src/functional_test/: __init__.py  bulk.py  bulkgen.py  cli.py  compare.py  env.py  parquet_out.py  remapper.py  runner.py
testing-tools/functional-test/tests/: test_bulkgen.py  test_cli.py  test_compare.py  test_env.py  test_parquet_out.py  test_runner.py
testing-tools/odse-volume-generator/: .gitignore  README.md  pyproject.toml
testing-tools/odse-volume-generator/config/: ratios.yaml
testing-tools/odse-volume-generator/scripts/: odse_top_tables_by_size.sql  odse_volume_profile.sql
testing-tools/odse-volume-generator/src/odse_volume_generator/: __init__.py  config.py  generate.py  keys.py  load.py  pools.py  run.py  smoke.py  verify.py
testing-tools/odse-volume-generator/src/odse_volume_generator/schema/: patient_values.yaml
utilities/rdb-compare/: LOOP.md  pyproject.toml
utilities/rdb-compare/rdb_compare/: classifier.py  cli.py  db.py  engine.py
utilities/rdb-compare/rdb_compare/rules/: catalog.py
utilities/rdb-compare/tests/: test_engine.py
(+3432 files in other folders)
