[project]
name = "functional-test"
version = "0.1.0"
description = "Run NEDSS reporting-pipeline functional tests against an already-running database and application."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymssql>=2.3.0",
]

[project.scripts]
functional-test = "functional_test.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/functional_test"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
