[project]
name = "odse-volume-generator"
version = "0.1.0"
description = "High-volume synthetic NBS_ODSE generator for RTR install / Debezium initial-snapshot performance testing. Hybrid: a Python driver owns deterministic keys and sharding; tablefaker owns column values."
requires-python = ">=3.11"
dependencies = [
    "tablefaker>=1.11.1",
    "faker>=30.0.0",
    "pyarrow>=17.0.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/odse_volume_generator"]
