[project]
name = "rdb-compare"
version = "0.1.0"
description = "Local RDB (MasterETL) vs RDB_MODERN (RTR) database comparison tool with a declarative known-differences rule registry."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pymssql>=2.3.0",
]

[project.scripts]
rdb-compare = "rdb_compare.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rdb_compare"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
